fix overflow input

--- a/app/assets/css/pages/_documentation.styl
+++ b/app/assets/css/pages/_documentation.styl
@@ -326,6 +326,7 @@ hr.clear
                     margin-top: 5px
                     margin-bottom: 5px
                     input
+                        width: 100%
                         padding: 5px
                         font-size: 2em
                         flex: 1 auto;
